# VELRA-INTELLIGENT-DATING-

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  Velra_v2_Postman_Collection.json  check_key.py  docker-compose.yml  import_schema.sql  init_db.py  migrate_supabase.py  openapi.json  pyproject.toml  requirements.txt  supabase_sync_migration.sql  test_full_chain.py  test_integration.py  test_latency.py  test_sso_insert.py  test_velra.db  velra.db  verify_backend.py
.chroma/: chroma.sqlite3
app/: __init__.py  main.py  router.py
app/core/: cache.py  chroma.py  config.py  database.py  email.py  exceptions.py  gemini_client.py  logging.py  openai_client.py  rate_limit.py
app/features/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
app/features/calculators/: router.py
app/features/chat_analysis/: __init__.py  router.py  schemas.py  scoring_rules.json
app/features/feedback/: router.py  schemas.py
app/features/profiles/: router.py  schemas.py
app/features/tips/: router.py
app/middleware/: exceptions.py  logging.py
data/: training_dataset.json
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/node_modules_trash/: .package-lock.json
frontend/src/: App.tsx  AuthContext.tsx  api.ts  index.css  supabaseClient.ts
frontend/src/components/: Layout.tsx
ml/: generate_dataset.py  model.pkl  predict.py  retrain_model.py  train_model.py
ml/data/: training_dataset.json
tests/: conftest.py  test_e2e_flow.py  test_feature_extractor.py  test_scoring_engine.py
(+27 files in other folders)
