[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velra"
version = "1.0.0"
description = "Production-ready FastAPI service for dating chat analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.10",
  "fastapi>=0.115.0",
  "openai>=1.50.0",
  "pydantic-settings>=2.5.2",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.35",
  "asyncpg>=0.29.0",
  "uvicorn[standard]>=0.30.6",
  "passlib[bcrypt]>=1.7.4",
  "pyjwt>=2.8.0",
  "email-validator>=2.1.0",
  "upstash-redis>=1.2.8"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
